use new seepal function in examples

--- a/README.Rmd
+++ b/README.Rmd
@@ -83,6 +83,7 @@ pal_unikn  # 10 default colors (web/sRGB)
 
 # Plot color palette: ----- 
 plot_pal(pal_unikn)
+seepal(pal_unikn)
 ```
 
 <img src = "./inst/pix/README-pal_unikn-1.png" align = "center" alt = "pal_unikn" style = "border:10;"/>
@@ -100,6 +101,7 @@ pal_unikn_plus  # 11 colors (white in middle)
 
 # Plot color palette: ----- 
 plot_pal(pal_unikn_plus)
+seepal(pal_unikn_plus)
 ```
 
 <img src = "./inst/pix/README-pal_unikn_plus-1.png" align = "center" alt = "pal_unikn_plus" style = "border:10;"/>
@@ -110,6 +112,9 @@ The following dedicated color palettes are defined in an Excel file on [Colours 
 and provided here by the following color palettes: 
 
 ```{r pal_additional, eval = FALSE}
+# All palettes:
+seepal("all")
+
 # 8 mono-tone palettes: ----- 
 # Name:          Nr:           Tone:          
 pal_seeblau      # 5 shades of seeblau
@@ -236,7 +241,6 @@ plot_pal(col_scale(c(rev(pal_petrol),  "white", pal_Bordeaux))(11))
 
 <img src = "./inst/pix/README-col_scale_3-3.png" align = "center" alt = "col_scale: pal_petrol white pal_Bordeaux" style = "border:10;"/>
 
-
 ## Using color palettes
 
 Using color palettes (currently) requires using `unlist` or calling another function:
@@ -253,7 +257,6 @@ unlist(pal_unikn)[2]  # call by index
 
 barplot(rep(6:3, 4), col = colorRampPalette(pal_unikn_plus)(5))
 ```
-
 
 ### ToDo <img src = "./inst/pix/todo.png" alt = "ToDo" align = "right" width = "120px" style = "width: 120px; float: right; border:10;"/>
 
@@ -277,11 +280,12 @@ Examples for using color palettes in graphs:
 
 ```{r use_pal_demo_barplot, eval = FALSE}
 # Using color palettes:
-barplot(1/sqrt(1:11),  col = unlist(pal_unikn_plus))
-barplot(1/sqrt(10:25), col = unlist(pal_unikn_pair))
+barplot(1/sqrt(1:11),  col = seepal(pal_unikn_plus))
+barplot(1/sqrt(10:25), col = seepal(pal_unikn_pair))
 
 # Using n colors of a palette:
-barplot(1/sqrt(1:4), col = as.character(pal_n(n = 5, pal = pal_seegruen)))
+barplot(1/sqrt(1:5), col = seepal(pal_n(n = 4, pal = pal_unikn)))
+barplot(1/sqrt(1:5), col = seepal(pal_unikn))  # pal_n does not recognize name (without "pal_")
 
 # Scatterplot:
 plot(x = runif(200), y = runif(200), "p", pch = 16, cex = 5, col = adjustcolor(pal_unikn, alpha.f = 1))   # 0 transparency
@@ -295,12 +299,12 @@ Visualizing data with `image`:
 set.seed(1)
 n <- 20
 m <- matrix(rnorm(n*n), ncol = n, nrow = n)
-image(m, col = unlist(pal_seeblau))
-image(m, col = unlist(pal_peach))
-image(m, col = unlist(pal_seegruen))
-image(m, col = unlist(pal_petrol))
-image(m, col = unlist(pal_pinky))
-image(m, col = unlist(pal_Bordeaux))
+image(m, col = seepal(pal_seeblau))
+image(m, col = seepal(pal_peach))
+image(m, col = seepal(pal_seegruen))
+image(m, col = seepal(pal_petrol))
+image(m, col = seepal(pal_pinky))
+image(m, col = seepal(pal_bordeaux))
 
 # Geometric images:
 x <- y <- seq(-4 * pi, 4 * pi, len = 30)
@@ -320,12 +324,19 @@ image(z = cos(r^2) * exp(-r/6), col = colorRampPalette(c(pal_seeblau, rev(pal_pe
 # contour(z, add = TRUE, drawlabels = FALSE)
 ```
 
-
 ## Text
 
-Like all other templates, our renderings are subject to constraints and limitations. 
+`unikn` also provides some functions for plotting graphical elements (like boxes) and styled text (with decorations like colored backgrounds or underlining). 
+
+Some important caveats:
+
+- Plotting text (i.e., graphically rendering characters) is rarely a good idea. It typically doesn't scale (when changing the size of images) and cannot be recognized automatically (e.g., copied, indexed, or scraped). Hence, the following functions should only be used in contexts in which no better solutions are available or practical (e.g., when specifically creating images, or needing to add text to graphs). 
+
+- Like all other templates, our renderings are subject to constraints and limitations. 
 As a standard installation of R lacks the official "Theinhardt" fonts, we can only mimic the design specifications (in Arial, sans serif). 
-Nevertheless, the `unikn` package helps preventing common mistakes by novices (e.g., boxes or lines extending beyond text, or step-functions in multi-line titles) and can be customized and improved by expert users. Overall, we hope that the following functions will be useful for plotting graphical elements (e.g., boxes, logos, etc.) and achieving a uniform look when styling visualizations.
+Nevertheless, the `unikn` package helps preventing common mistakes by novices (e.g., boxes or lines extending beyond text, or step-functions in multi-line titles) and can be customized and improved by expert users. 
+
+Overall, we hope that the following functions will be useful for plotting graphical elements (e.g., boxes, logos, etc.) and achieving a uniform look when styling visualizations.
 
 ### ToDo <img src = "./inst/pix/todo.png" alt = "ToDo" align = "right" width = "120px" style = "width: 120px; float: right; border:10;"/>
 
