--- a/README.Rmd
+++ b/README.Rmd
@@ -195,7 +195,7 @@ This serves 2 main functions:
 # Extending color palettes: ----- 
 plot_pal(col_scale()(20))
 plot_pal(col_scale(pal_seeblau)(10))
-plot_pal(col_scale(pal_Bordeaux)(10))
+plot_pal(col_scale(pal_bordeaux)(10))
 ```
 
 <img src = "./inst/pix/README-col_scale_1-1.png" align = "center" alt = "col_scale" style = "border:10;"/>
@@ -212,10 +212,10 @@ and the desired resolution of the color gradient (as an integer argument):
 
 ```{r col_scale_2, eval = FALSE}
 # Combining colors: ----- 
-plot_pal(col_scale(c(seeblau, "white", pinky))(10)) 
-plot_pal(col_scale(c(signal, petrol))(10))  
-plot_pal(col_scale(c(Bordeaux, "white", petrol))(10)) 
-plot_pal(col_scale(c(karpfenblau, seeblau, "gold"))(10)) 
+plot_pal(col_scale(c(Seeblau, "white", Pinky))(10)) 
+plot_pal(col_scale(c(Signal, Petrol))(10))  
+plot_pal(col_scale(c(Bordeaux, "white", Petrol))(10)) 
+plot_pal(col_scale(c(Karpfenblau, Seeblau, "gold"))(10)) 
 ```
 
 <img src = "./inst/pix/README-col_scale_2-1.png" align = "center" alt = "col_scale: seeblau white pinky" style = "border:10;"/>
@@ -231,8 +231,10 @@ For best results, consider combining existing color palettes and individual colo
 
 ```{r col_scale_3, eval = FALSE}
 # Combining color palettes (and colors): ----- 
+plot_pal(col_scale(c(rev(pal_seeblau), "white", pal_peach))(11))
 plot_pal(col_scale(c(rev(pal_seeblau), "white", pal_pinky))(11))
 plot_pal(col_scale(c(rev(pal_seeblau), "white", pal_petrol))(11))
+plot_pal(col_scale(c(rev(pal_seeblau), "white", pal_seegruen))(11))
 plot_pal(col_scale(c(rev(pal_petrol),  "white", pal_Bordeaux))(11))
 ```
 
@@ -256,7 +258,7 @@ typeof(unlist(pal_unikn)) # "character"
 unlist(pal_unikn)["seeblau3"]  # call by name
 unlist(pal_unikn)[2]  # call by index
 
-barplot(rep(6:3, 4), col = colorRampPalette(pal_unikn_plus)(5))
+barplot(rep(6:3, 4), col = colorRampPalette(pal_unikn_plus)(7))
 ```
 
 ### ToDo <img src = "./inst/pix/todo.png" alt = "ToDo" align = "right" width = "120px" style = "width: 120px; float: right; border:10;"/>
@@ -350,6 +352,14 @@ Identify key functions:
 For `mark` and `line`: Versions that allow to arrange multiple character strings with fixed spacing and sensible default colors:
 
 - `head` for arranging headings (sensible defaults, warn in case of step functions)
+
+```{r plot_text_macros, eval = FALSE}
+post(lbls = c("Please note", "Something important here."), y = .5, y_layout = .05, cex = c(1.5, 1.2), font = c(2, 1))
+mark(lbls = "Highlighting text is simple.", new_plot = "slide")
+line(lbls = c("veni", "vidi", "vici"), y = .8, y_layout = .1, cex = 2, font = 2, new_plot = "blank")
+head(lbls = c("Dies", "ist eine tolle", "Headline."), cex = 4)
+```
+
 
 <!-- Demo of text functions: -->
 
