update text examples

--- a/README.Rmd
+++ b/README.Rmd
@@ -351,17 +351,16 @@ Identify key functions:
 
 For `mark` and `line`: Versions that allow to arrange multiple character strings with fixed spacing and sensible default colors:
 
-- `head` for arranging headings (sensible defaults, warn in case of step functions)
-
-```{r plot_text_macros, eval = FALSE}
-post(lbls = c("Please note", "Something important here."), y = .5, y_layout = .05, cex = c(1.5, 1.2), font = c(2, 1))
-mark(lbls = "Highlighting text is simple.", new_plot = "slide")
-line(lbls = c("veni", "vidi", "vici"), y = .8, y_layout = .1, cex = 2, font = 2, new_plot = "blank")
-head(lbls = c("Dies", "ist eine tolle", "Headline."), cex = 4)
-```
-
+- `heading` for arranging headings (sensible defaults, warn in case of step functions)
 
 <!-- Demo of text functions: -->
+
+```{r plot_text_macros, eval = FALSE}
+post(lbls = c("Please note", "Something important here."), y = c(.5, .4), cex = c(1.5, 1.2), font = c(2, 1))
+mark(lbls = "Highlighting text is simple.", new_plot = "slide")
+line(lbls = c("Ewig", "währt", "am längsten"), y = .8, y_layout = .1, font = 2, new_plot = "blank")
+heading(lbls = c("Dies", "ist eine feine", "Headline."))
+```
 
 ### Examples
 
