--- a/vignettes/colors.Rmd
+++ b/vignettes/colors.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "Colors"
+title: "Colors and color palettes"
 author: "Hansjörg Neth, SPDS, uni.kn"
-date: "2019 03 03"
+date: "2019 03 05"
 output: 
   rmarkdown::html_vignette: 
     fig_caption: yes
@@ -20,28 +20,27 @@ knitr::opts_chunk$set(
 
 Explain which colors and color palettes exist in `unikn` and how to use them.
 
-```{r}
-library(unikn)
+```{r load_pkg, message = FALSE, warning = FALSE}
+library(unikn)  # load unikn package
 ```
-
 
 ## Viewing color palettes
 
 Viewing all available color palettes:
 
-```{r}
+```{r seepal_all, fig.align = 'center', fig.width = 7.2, fig.height = 7}
 seepal()
 ```
 
 Viewing a particular color palette:
 
-```{r}
+```{r view_pal, fig.align = 'center', fig.width = 7.2, fig.height = 5}
 seepal(pal = pal_unikn_plus)
 ```
 
 ## Using colors and color palettes
 
-```{r}
+```{r pref_cols, fig.align = 'center', fig.width = 7.2, fig.height = 5}
 seepal(pal_unikn_pref)
 ```
 
@@ -49,7 +48,7 @@ seepal(pal_unikn_pref)
 
 Using only a subset of colors:
 
-```{r}
+```{r, fig.align = 'center', fig.width = 6, fig.height = 5}
 seepal(n = 4)
 seepal(pal_unikn_plus, 4)
 ```
@@ -63,7 +62,7 @@ Extending a palette to a larger number of colors than contained in the palette:
 
 Combining color palettes: 
 
-```{r}
+```{r, fig.align = 'center', fig.width = 7.2, fig.height = 5}
 seepal(pal = c(rev(pal_seeblau), "white", pal_pinky))
 seepal(pal = c(rev(pal_seeblau), "white", pal_petrol))
 seepal(pal = c(rev(pal_petrol), "white", pal_bordeaux))
@@ -74,66 +73,14 @@ seepal(pal = c(rev(pal_petrol), "white", pal_bordeaux))
 
 <!-- unikn pkg logo and link: -->
 <a href = "https://github.com/hneth/unikn/">
-<img src = "../inst/pix/box_unikn.png" alt = "unikn::" align = "right" width = "140px" style = "width: 140px; float: right; border:0;"/>
+<img src = "../inst/pix/unikn.png" alt = "unikn::" align = "right" width = "140px" style = "width: 140px; float: right; border:0;"/>
 </a>
 
 <!-- Index of vignettes: -->
 
 | Nr.  | Vignette | Content    |        
 | ---: |:---------|:-----------|
-| 1. | [Colors](colors.html) | Using color palettes | 
-| 2. | [Text](text.html)     | Using decorated text | 
-
+| 1. | [Colors](colors.html) | Colors and color palettes | 
+| 2. | [Text](text.html)     | Text boxes and text decorations | 
 
 <!-- eof. -->
-
-
-<!-- Default vignette stuff: --> 
-
-Vignettes are long form documentation commonly included in packages. Because they are part of the distribution of the package, they need to be as compact as possible. The `html_vignette` output type provides a custom style sheet (and tweaks some options) to ensure that the resulting html is as small as possible. The `html_vignette` format:
-
-- Never uses retina figures
-- Has a smaller default figure size
-- Uses a custom CSS stylesheet instead of the default Twitter Bootstrap style
-
-## Vignette Info
-
-Note the various macros within the `vignette` section of the metadata block above. These are required in order to instruct R how to build the vignette. Note that you should change the `title` field and the `\VignetteIndexEntry` to match the title of your vignette.
-
-## Styles
-
-The `html_vignette` template includes a basic CSS theme. To override this theme you can specify your own CSS in the document metadata as follows:
-
-    output: 
-      rmarkdown::html_vignette:
-        css: mystyles.css
-
-## Figures
-
-The figure sizes have been customised so that you can easily put two images side-by-side. 
-
-```{r, fig.show='hold'}
-plot(1:10)
-plot(10:1)
-```
-
-You can enable figure captions by `fig_caption: yes` in YAML:
-
-    output:
-      rmarkdown::html_vignette:
-        fig_caption: yes
-
-Then you can use the chunk option `fig.cap = "Your figure caption."` in **knitr**.
-
-## More Examples
-
-You can write math expressions, e.g. $Y = X\beta + \epsilon$, footnotes^[A footnote here.], and tables, e.g. using `knitr::kable()`.
-
-```{r, echo=FALSE, results='asis'}
-knitr::kable(head(mtcars, 10))
-```
-
-Also a quote using `>`:
-
-> "He who gives up [code] safety for [code] speed deserves neither."
-([via](https://twitter.com/hadleywickham/status/504368538874703872))
