--- a/vignettes/text.Rmd
+++ b/vignettes/text.Rmd
@@ -18,17 +18,21 @@ knitr::opts_chunk$set(
 )
 ```
 
-Beyond providing support for [colors](colors.html), `unikn` provides some functions for plotting graphical elements (like boxes) and styled text (with decorations like colored backgrounds or underlining). 
+Beyond providing support for [colors](colors.html), `unikn` provides functions for plotting graphical elements (like boxes) and text decorations (with colored backgrounds or underlining). 
+Before we illustrate these functions through examples, it's important to note some caveats: 
 
-Some important caveats:
+- Plotting text (i.e., graphically rendering characters) is rarely a good idea. 
+Plotted text typically doesn't scale (when changing the size of images) and cannot be recognized automatically (e.g., copied, indexed, or scraped). 
+Hence, the following functions should only be used in contexts in which no better solutions are available 
+(e.g., when specifically creating images, or when having to add text to graphs). 
 
-- Plotting text (i.e., graphically rendering characters) is rarely a good idea. It typically doesn't scale (when changing the size of images) and cannot be recognized automatically (e.g., copied, indexed, or scraped). 
-Hence, the following functions should only be used in contexts in which no better solutions are available (e.g., when specifically creating images, or needing to add text to graphs). 
+- Like all other templates, our renderings are subject to constraints and limitations. 
+As a standard installation of R lacks the prescribed "Theinhardt" fonts, we can only mimic the official design specifications (in Arial, sans serif). 
 
-- Like all other templates, our renderings are subject to constraints and limitations. As a standard installation of R lacks the official "Theinhardt" fonts, we can only mimic the design specifications (in Arial, sans serif). 
-Nevertheless, the `unikn` package helps preventing common mistakes by novices (e.g., boxes or lines extending beyond text, or step-functions in multi-line titles) and can be customized and improved by expert users. 
+That said, it's sometimes useful to create digital fluff. Provided that decorative elements can be produced easily and at low cost, they can help to structure and emphasize information. 
+The `unikn` package helps preventing common mistakes by novices (e.g., boxes or lines extending beyond text, or step-functions in multi-line titles) and can be customized and improved by expert users. Hence, we hope that the following functions are useful for plotting graphical elements (e.g., boxes, logos, etc.) and help you achieve a uniform look when styling your presentations and visualizations. 
 
-Overall, we hope that the following functions are useful for plotting graphical elements (e.g., boxes, logos, etc.) and help you achieve a uniform look when styling your visualizations.
+Please load the `unikn` package to get started: 
 
 ```{r load_pkg, message = FALSE, warning = FALSE}
 library(unikn)  # load unikn package
