--- a/vignettes/colors.Rmd
+++ b/vignettes/colors.Rmd
@@ -31,14 +31,14 @@ library(unikn)  # load unikn package
 
 Viewing all available color palettes:
 
-```{r seepal_all, fig.align = 'center', fig.width = 7.2, fig.height = 6}
-seepal()
+```{r seecol_all, fig.align = 'center', fig.width = 7.2, fig.height = 6}
+seecol()
 ```
 
 Viewing the colors and details of a particular color palette:
 
 ```{r view_pal, fig.align = 'center', fig.width = 7.2, fig.height = 5}
-seepal(pal = pal_unikn_plus)
+seecol(pal = pal_unikn_plus)
 ```
 
 ## Using colors and color palettes
@@ -47,7 +47,7 @@ Using colors in a graph:
 
 ```{r}
 # Using a color palette:
-barplot(1/sqrt(1:11), col = seepal(pal_unikn_plus))
+barplot(1/sqrt(1:11), col = seecol(pal_unikn_plus))
 ```
 
 
@@ -59,35 +59,35 @@ barplot(1/sqrt(1:11), col = seepal(pal_unikn_plus))
 Using only a subset of colors:
 
 ```{r, fig.align = 'center', fig.width = 6, fig.height = 5}
-seepal(n = 4)
-seepal(pal_unikn_plus, 4)
+seecol(n = 4)
+seecol(pal_unikn_plus, 4)
 ```
 
 Extending a palette to a larger number of colors than contained in the palette:
 
 ```{r}
-# seepal(n = 12)
-# seepal(pal_unikn_plus, 12)
+# seecol(n = 12)
+# seecol(pal_unikn_plus, 12)
 ```
 
 Combining color palettes: 
 
 ```{r, fig.align = 'center', fig.width = 7.2, fig.height = 5}
-# seepal(pal = c(rev(pal_seeblau), "white", pal_petrol))
-# seepal(pal = c(rev(pal_petrol), "white", pal_bordeaux))
+# seecol(pal = c(rev(pal_seeblau), "white", pal_petrol))
+# seecol(pal = c(rev(pal_petrol), "white", pal_bordeaux))
 ```
 
 Mixing palettes:
 
 ```{r}
-seepal(pal = col_scale(c(Karpfenblau, Seeblau, "gold"))(10))
+seecol(pal = col_scale(c(Karpfenblau, Seeblau, "gold"))(10))
 ```
 
 Examples of combining colors and color palettes into new color palettes:
 
 ```{r bar_seeblau_pinky, fig.align = 'center', fig.width = 7.2, fig.height = 4}
-# barplot((-5:5)^2+5, col = seepal(pal = c(rev(pal_seeblau), "white", pal_pinky)))
-# barplot(1/sqrt(11:1), col = seepal(pal = c(rev(pal_seeblau), "white", pal_seegruen)))
+# barplot((-5:5)^2+5, col = seecol(pal = c(rev(pal_seeblau), "white", pal_pinky)))
+# barplot(1/sqrt(11:1), col = seecol(pal = c(rev(pal_seeblau), "white", pal_seegruen)))
 ```
 
 ## All unikn vignettes
