--- a/vignettes/text.Rmd
+++ b/vignettes/text.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Text boxes and decorations"
 author: "SPDS, uni.kn"
-date: "2019 03 20"
+date: "2019 03 23"
 output: 
   rmarkdown::html_vignette: 
     fig_caption: yes
@@ -30,18 +30,14 @@ knitr::opts_chunk$set(echo = TRUE,
 ```
 
 Beyond providing support for [colors](colors.html), `unikn` provides functions for plotting graphical elements (like boxes) and text decorations (with colored backgrounds or underlining). 
-Before we illustrate these functions through examples, it's important to note some caveats: 
+Before illustrating these functions by examples, it's important to note some caveats: 
 
-- Plotting text (i.e., graphically rendering characters) is rarely a good idea. 
-Plotted text typically doesn't scale (when changing the size of images) and cannot be recognized automatically (e.g., copied, indexed, or scraped). 
-Hence, the following functions should only be used in contexts in which no better solutions are available 
-(e.g., when specifically creating images, or when having to add text to graphs). 
+- Plotting text (i.e., graphically rendering characters) is rarely a good idea. In contrast to the vector fonts used by DTP programs, plotted text typically does not scale (when changing the size of images) and cannot be recognized automatically (e.g., copied, indexed, or scraped). 
+Hence, the following functions should only be used when no better solutions are available (e.g., for adding text to graphs, or for obstructing automatic text recognition). 
 
-- Like all other templates, our renderings are subject to constraints and limitations. 
-As a standard installation of R lacks the prescribed "Theinhardt" fonts, we can only mimic the official design specifications (in Arial, sans serif). 
+- Like all other templates, our renderings are subject to constraints and limitations. For instance, as any standard installation of [R](https://www.r-project.org/) lacks the prescribed "Theinhardt" fonts, we only mimic the official design specifications (in Arial, sans serif). 
 
-That said, it's sometimes useful to create digital fluff. Provided that decorative elements can be produced easily and at low cost, they can help to structure and emphasize information. 
-The `unikn` package helps preventing common mistakes by novices (e.g., boxes or lines extending beyond text, or step-functions in multi-line titles) and can be customized and improved by expert users. Hence, we hope that the following functions are useful for plotting graphical elements (e.g., boxes, logos, etc.) and help you achieve a uniform look when styling your presentations and visualizations. 
+That said, it's sometimes useful to create digital fluff. Provided that decorative elements can be produced easily and at low cost, they can be used to emphasize and structure information. The `unikn` package helps preventing common mistakes by novices (e.g., boxes or lines extending beyond text, or step-functions in multi-line titles) and can be customized and improved by expert users. Hence, we hope that the following functions are useful for plotting graphical elements (e.g., boxes, logos, etc.) and help you achieve a uniform look when styling your presentations and visualizations. 
 
 Please load the `unikn` package to get started: 
 
@@ -51,10 +47,10 @@ library(unikn)  # load unikn package
 
 ## Plotting empty slides and boxes
 
-As the text functions of `unikn` add styled text to an existing plot, we need to create a plot to which we can add text. 
-`unikn` provides 2 functions to begin a new plot:
+As the text functions of `unikn` add styled text to an existing plot, we must first create a plot to which we can add text. 
+`unikn` provides 2 functions to start a new plot:
 
-1. `slide` plots an empty canvass or frame:
+1. `slide` plots an empty canvass (or rectangular frame):
 
 ```{r slide_def, fig.align = 'center', fig.width = 4, fig.height = 3}
 slide()  # plot default slide
@@ -66,19 +62,21 @@ slide()  # plot default slide
 xbox()  # plot default xbox
 ```
 
+Both commands accept additional arguments to customize their appearance. 
+
 ### Colors
 
 The background and border colors of slides can be changed by setting their `col`, `border`, and `lwd` arguments:
 
 ```{r slide_col, fig.align = 'center', fig.width = 4, fig.height = 3}
-slide(col = pal_seeblau[[1]], border = Petrol, lwd = 5)  # set colors of slide and border
-slide(col = pal_peach[[2]], border = NA)  # colored slide without border
+slide(col = pal_seeblau[[1]], border = Petrol, lwd = 5)  # set colors of slide background and border
+slide(col = pal_peach[[2]], border = NA)  # colored slide without a border
 ```
 
 Similarly, the background color of xboxes can be changed by the `col` argument:
 
 ```{r xbox_col, fig.align = 'center', fig.width = 2, fig.height = 2}
-xbox(col = Pinky)  # set color of xbox
+xbox(col = Pinky)  # set background color of xbox
 ```
 
 ### Dimensions
@@ -93,11 +91,14 @@ slide(dim = c(3, 1))  # a slide 3 times wider than high
 ```
 
 Similarly, an xbox has the default dimensions of a unit square (i.e., `dim = c(1, 1)`). 
-To change this default, use the `dim` argument for specifying the xbox's x- and y-dimensions, respectively:
+To change this default, use the `dim` argument for specifying the xbox's `x`- and `y`-dimensions, respectively:
 
 ```{r xbox_dim, fig.align = 'center', fig.width = 2, fig.height = 4}
 xbox(col = Petrol, dim  = c(1, 2))  # an xbox 2 times higher than wide
 ```
+
+The 2 strokes of the X (in the top right corner) are orthogonal when viewing the `xbox` at the aspect ratio indicated by `dim` (i.e., here: at a ratio of width x = 1 to height y = 2). When viewing the box at any different aspect ratio, the X is distorted. Hence, viewing and printing the image at the desired aspect ratio is crucial for designing an xbox.
+
 
 ## Plotting styled text
 
