--- a/vignettes/colors.Rmd
+++ b/vignettes/colors.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Colors and color palettes"
 author: "SPDS, uni.kn"
-date: "2019 03 21"
+date: "2019 03 23"
 output: 
   rmarkdown::html_vignette: 
     fig_caption: yes
@@ -51,13 +51,13 @@ There are 2 subsets of the available color palettes:
 
 a. All basic color palettes:
 
-```{r seecol_unikn_all, fig.width = 7, fig.height = 6}
+```{r seecol_unikn_all, fig.width = 7, fig.height = 3}
 seecol("unikn_all")
 ```
 
 b. all pre-defined color gradients:
 
-```{r seecol_grad_all, fig.width = 7, fig.height = 6}
+```{r seecol_grad_all, fig.width = 7, fig.height = 3}
 seecol("grad_all")
 ```
 
@@ -95,14 +95,14 @@ barplot(1/sqrt(1:11), col = mixcol(c(rev(pal_seegruen), "white", pal_bordeaux), 
 Using only a subset of colors:
 
 ```{r use_subset, fig.width = 7, fig.height = 6}
-seecol(n = 4)
+seecol("all", n = 4)
 seecol(pal_unikn_plus, 4)
 ```
 
 Extending a palette to a larger number of colors than contained in the palette:
 
 ```{r use_superset, fig.width = 7, fig.height = 6}
-seecol(pal = "all", n = 12)
+seecol("all", n = 12)
 seecol(pal_seeblau, 12)
 ```
 
@@ -128,6 +128,7 @@ Examples of combining colors and color palettes into new color palettes:
 barplot((-5:5)^2+5, col = mixcol(pal = c(rev(pal_seeblau), "white", pal_pinky)))
 barplot(1/sqrt(11:1), col = mixcol(pal = c(rev(pal_seeblau), "white", pal_seegruen)))
 ```
+
 
 ## All unikn vignettes
 
