--- a/vignettes/text.Rmd
+++ b/vignettes/text.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Text boxes and decorations"
 author: "SPDS, uni.kn"
-date: "2019 03 23"
+date: "2019 03 24"
 output: 
   rmarkdown::html_vignette: 
     fig_caption: yes
@@ -30,14 +30,14 @@ knitr::opts_chunk$set(echo = TRUE,
 ```
 
 Beyond providing support for [colors](colors.html), `unikn` provides functions for plotting graphical elements (like boxes) and text decorations (with colored backgrounds or underlining). 
-Before illustrating these functions by examples, it's important to note some caveats: 
+Before illustrating these functions, please note some caveats: 
 
 - Plotting text (i.e., graphically rendering characters) is rarely a good idea. In contrast to the vector fonts used by DTP programs, plotted text typically does not scale (when changing the size of images) and cannot be recognized automatically (e.g., copied, indexed, or scraped). 
 Hence, the following functions should only be used when no better solutions are available (e.g., for adding text to graphs, or for obstructing automatic text recognition). 
 
 - Like all other templates, our renderings are subject to constraints and limitations. For instance, as any standard installation of [R](https://www.r-project.org/) lacks the prescribed "Theinhardt" fonts, we only mimic the official design specifications (in Arial, sans serif). 
 
-That said, it's sometimes useful to create digital fluff. Provided that decorative elements can be produced easily and at low cost, they can be used to emphasize and structure information. The `unikn` package helps preventing common mistakes by novices (e.g., boxes or lines extending beyond text, or step-functions in multi-line titles) and can be customized and improved by expert users. Hence, we hope that the following functions are useful for plotting graphical elements (e.g., boxes, logos, etc.) and help you achieve a uniform look when styling your presentations and visualizations. 
+That said, creating digital fluff can sometimes be useful. Provided that decorative elements can be produced easily and flexibly, they can be used to emphasize or structure information. The `unikn` package helps preventing common mistakes by novices (e.g., boxes or lines extending beyond text, or step-functions in multi-line titles) and can be customized and improved by expert users. Hence, we hope that the following functions are useful for plotting graphical elements (e.g., boxes, logos, etc.) and help you achieve a uniform look when styling presentations or visualizations.
 
 Please load the `unikn` package to get started: 
 
@@ -48,7 +48,7 @@ library(unikn)  # load unikn package
 ## Plotting empty slides and boxes
 
 As the text functions of `unikn` add styled text to an existing plot, we must first create a plot to which we can add text. 
-`unikn` provides 2 functions to start a new plot:
+`unikn` provides 2 basic functions for creating new plots:
 
 1. `slide` plots an empty canvass (or rectangular frame):
 
@@ -97,7 +97,7 @@ To change this default, use the `dim` argument for specifying the xbox's `x`- an
 xbox(col = Petrol, dim  = c(1, 2))  # an xbox 2 times higher than wide
 ```
 
-The 2 strokes of the X (in the top right corner) are orthogonal when viewing the `xbox` at the aspect ratio indicated by `dim` (i.e., here: at a ratio of width x = 1 to height y = 2). When viewing the box at any different aspect ratio, the X is distorted. Hence, viewing and printing the image at the desired aspect ratio is crucial for designing an xbox.
+The 2 strokes of the X (in the top right corner) are orthogonal when viewing the `xbox` at the aspect ratio indicated by `dim` (i.e., here: at a ratio of width x = 1 to height y = 2). When viewing the box at any different aspect ratio, the X seems distorted. Hence, viewing and printing plots at the desired aspect ratio is crucial for designing an xbox.
 
 ## Plotting styled text
 
@@ -112,11 +112,11 @@ In addition, there are 2 helper functions:
 - `headline`
 - `url_unikn`
 
-The following examples illustrate each command.
+The following examples illustrate each function. 
 
 ### Mark text
 
-The `mark` command allows highlighting text by plotting it with colored background boxes (to provide the functionality of "Markieren"): 
+The `mark` function allows highlighting text by plotting it with colored background boxes (to provide the functionality of "Markieren"): 
 
 ```{r mark_demo, echo = FALSE, fig.width = 3, fig.height = 3}
 lbl_blank <- c("                                                ",
@@ -185,7 +185,7 @@ See `?mark` for details.
 
 ### Underline text
 
-The `line` command allows emphasizing text by plotting it with colored underlining (to provide the functionality of "Unterstreichen"): 
+The `line` function allows emphasizing text by plotting it with colored underlining (to provide the functionality of "Unterstreichen"): 
 
 ```{r line_demo, echo = FALSE, fig.width = 3, fig.height = 3}
 slogan <- c("Geradlinig", "Authentisch", "Beweglich", "Offen", "Paradiesisch")
@@ -198,10 +198,10 @@ line(labels = slogan,
 As with `mark` above, the `line` command distinguishes between creating a new plot (by setting `new_plot` to either `"blank"` or "`slide`") or 
 adding to a pre-existing plot (by using the default `new_plot = "none"`): 
 
-```{r line_ex1, echo = TRUE, fig.width = 4, fig.height = 3}
-lbl_line <- c("This is neat, true, and terribly important.")
-line(labels = lbl_line, new_plot = "blank")  # create a new plot
-line(labels = "(which is why we underline it).", y = .40, cex = 1.2)  # add to plot
+```{r line_ex1, echo = TRUE, fig.width = 4.5, fig.height = 3}
+lbl_line <- c("This is neat, true, and terribly important")
+line(labels = lbl_line, new_plot = "blank", y = .6, cex = 1.1)  # create a new plot
+line(labels = "(which is why we underline it).", y = .45, cex = 1)  # add to plot
 ```
 
 The arguments for text elements (`labels`), text positions (`x`, `y`, `y_layout`), and text properties and decorations (`col`, `col_bg`, `cex`, and `font`) work as they do for `mark`. For instance, shorter vectors are recycled to match the length of `labels`: 
@@ -215,19 +215,60 @@ line(labels = slogan,
      new_plot = "blank")
 ```
 
-
-"Unterstreichen"
-
-+++ here now +++
-
-
 ### Post it
 
-"Merken"
+The `post` function allows adding text to a rectangular `xbox` (to provide the functionality of "Merken"): 
+
+```{r post_demo, echo = FALSE, fig.width = 4, fig.height = 2}
+xbox(col = Seegruen, dim = c(4, 2))
+post(labels = "Please note", x = .1, y = 1.2, cex = 1.2, font = 2, new_plot = FALSE)
+post(labels = c("For good results, always design and view", "boxes and text at the size at which they", "will be saved and displayed later."), 
+     x = .1, y = .8, y_layout = .1, cex = 1, font = 1, new_plot = FALSE)
+```
+
+By default, `post` assumes a pre-existing `xbox` to which the text elements of `labels` are to be added.  
+For square boxes, setting `new_plot` to `"xbox"` creates a new `xbox` with its default dimensions of `dim = c(1, 1)`.  
+By adjusting its color and text arguments, `post` allows creating simple badges or logos: 
+
+```{r post_logo, echo = TRUE, fig.width = 2, fig.height = 2, fig.show = "hold"}
+# Badge (to view as 250 x 250 pixel):
+post(labels = "ToDo", y = .35, 
+     col = "white", col_bg = pal_signal[[1]],
+     cex = 3, font = 2, new_plot = "xbox")  
+
+# Badge (to view as 250 x 250 pixel):
+post(labels = "R", y = .35, 
+     col = "white", col_bg = pal_seeblau[[5]],
+     cex = 8, font = 2, new_plot = "xbox")
+```
+
+Another use of `post` is to create an image that provides contact details: 
+
+```{r post_address, echo = TRUE, fig.width = 3, fig.height = 3}
+address <- c("Dr. B. F. Skinner", " ",
+             "Department of Psychology",
+             "Office F101",
+             "Tel.: +49 7531 88-0815",
+             "Fax: +49 7531 88-0810",
+             "b.f.skin@uni-konstanz.de")
+
+post(labels = "Contact",
+     y = .7,
+     cex = 1.2, font = 2,
+     col_bg = Petrol,
+     new_plot = "xbox")  # create new plot 
+
+post(labels = address,
+     y = .5, y_layout = .03,
+     new_plot = "none")  # add to plot
+```
 
 ### Headlines
 
 Titels
+
++++ here now +++
+
 
 ### URLs
 
