--- a/vignettes/text.Rmd
+++ b/vignettes/text.Rmd
@@ -50,19 +50,20 @@ library(unikn)  # load unikn package
 As the text functions of `unikn` add styled text to an existing plot, we must first create a plot to which we can add text. 
 `unikn` provides 2 basic functions for creating new plots:
 
-1. `slide` plots an empty canvass (or rectangular frame):
+1. `slide` plots an empty canvass (or rectangular frame); 
+2. `xbox` plots a colored box with an X in its top right corner.
+
+Here are both commands with their default settings: 
 
 ```{r slide_def, fig.align = 'center', fig.width = 4, fig.height = 3}
 slide()  # plot default slide
 ```
 
-2. `xbox` plots a colored box with an X in its top right corner:
-
 ```{r xbox_def, fig.align = 'center', fig.width = 2, fig.height = 2}
 xbox()  # plot default xbox
 ```
 
-Both commands accept additional arguments to customize their appearance. 
+Both functions accept additional arguments to customize their appearance. 
 
 ### Colors
 
@@ -99,6 +100,7 @@ xbox(col = Petrol, dim  = c(1, 2))  # an xbox 2 times higher than wide
 
 The 2 strokes of the X (in the top right corner) are orthogonal when viewing the `xbox` at the aspect ratio indicated by `dim` (i.e., here: at a ratio of width x = 1 to height y = 2). When viewing the box at any different aspect ratio, the X seems distorted. Hence, viewing and printing plots at the desired aspect ratio is crucial for designing an xbox.
 
+
 ## Plotting styled text
 
 There are 3 main functions for plotting text with decorations: 
@@ -107,12 +109,12 @@ There are 3 main functions for plotting text with decorations:
 - `line` allows underlining text with colored lines; 
 - `post` allows posting text in rectangular `xbox` elements.
 
-In addition, there are 2 helper functions: 
+In addition, there are 2 auxiliary functions: 
 
-- `headline`
-- `url_unikn`
+- `headline` allows plotting headlines with colored background boxes; 
+- `url_unikn` allows formatting URLs the uni.kn way. 
 
-The following examples illustrate each function. 
+The following sections illustrate the functions and their main options in turn. 
 
 ### Mark text
 
@@ -206,16 +208,15 @@ line(labels = "(which is why we underline it).", y = .45, cex = 1)  # add to plo
 
 The arguments for text elements (`labels`), text positions (`x`, `y`, `y_layout`), and text properties and decorations (`col`, `col_bg`, `cex`, and `font`) work as they do for `mark`. For instance, shorter vectors are recycled to match the length of `labels`: 
 
-```{r line_ex2, echo = FALSE, fig.width = 3, fig.height = 3}
+```{r line_ex2, echo = TRUE, fig.width = 3, fig.height = 3}
 slogan <- c("Geradlinig", "Farbenfroh", "Beweglich", "Bunt", "Paradiesisch")
 line(labels = slogan,
      x = c(0, .45), y = .9, y_layout = "even",
      col = c("black", Bordeaux), col_bg = c(Seeblau, Seegruen), 
-     cex = 1.1, font = 2,
-     new_plot = "blank")
+     cex = 1.1, font = 2, new_plot = "blank")
 ```
 
-### Post it
+### Post text
 
 The `post` function allows adding text to a rectangular `xbox` (to provide the functionality of "Merken"): 
 
@@ -298,7 +299,7 @@ heading(labels = c("Ene,", "mene, miste,", "es rappelt", "in der Kiste."),
 
 ### URLs
 
-One of the more obscure rules (in p. 31 of the CD manual) concerns the rendering of URLs, in which typical web patterns (like "http" or "www") are to be omitted and replaced by a typographical dash (which is longer than a hyphen). The `url_unikn` utility function allows formatting URLs the uni.kn way:
+One of the more obscure rules (on p. 31 of the CD manual) concerns the rendering of URLs, in which typical web patterns (like "http" or "www") are to be omitted and replaced by a typographical dash (which is longer than a hyphen). The `url_unikn` utility function allows formatting URLs the uni.kn way:
 
 ```{r url_post, fig.align = 'center', fig.width = 2, fig.height = 2}
 my_url <- url_unikn("https://www.uni-konstanz.de/")  # input URL as copied from web browser
@@ -306,10 +307,9 @@ my_url  # formatted URL
 
 # Put URL at bottom of an xbox:
 post(labels = my_url, y = .1, font = 4, 
-     new_plot = "xbox")
+     col_bg = pal_seeblau[[5]], new_plot = "xbox")
 ```
 
-+++ here now +++
 
 ## All unikn vignettes
 
